--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@capacitor/core": "2.4.7",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@ionic-native/core": "^5.33.0",
+    "@ionic-native/image-picker": "^5.33.0",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "axios": "^0.21.1",
+    "cordova-plugin-telerik-imagepicker": "^2.3.6",
     "core-js": "^3.6.5",
     "firebase": "^8.6.1",
+    "jetifier": "^2.0.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0"
